[gd_scene format=3 uid="uid://btdqtooylrfmo"]

[ext_resource type="Texture2D" uid="uid://dabhgkb3q8172" path="res://Assets/Arte Conceptual/ESCENARIO_PUZZLE_PIEDRAS_TAMAÃ‘O.jpg" id="1_5tcat"]
[ext_resource type="Script" uid="uid://cvv7kaqa8dd43" path="res://Scripts/rock.gd" id="2_gkdvu"]
[ext_resource type="Script" uid="uid://bjra2ysnqxaqr" path="res://Scripts/hud.gd" id="2_ogi7j"]
[ext_resource type="Texture2D" uid="uid://cmc32ehcjomvm" path="res://Assets/Arte Conceptual/PUZZLE_PIEDRA_1.png" id="3_2qgar"]
[ext_resource type="Texture2D" uid="uid://q3dj2akxv5os" path="res://Assets/Arte Conceptual/PUZZLE_PIEDRA_2.png" id="4_2qgar"]
[ext_resource type="Texture2D" uid="uid://bgwe53i0dk0gd" path="res://Assets/Arte Conceptual/PUZZLE_PIEDRA_3.png" id="5_lmibb"]
[ext_resource type="Texture2D" uid="uid://decefma7rts3q" path="res://Assets/Arte Conceptual/PUZZLE_PIEDRA_4.png" id="6_1djk2"]
[ext_resource type="Texture2D" uid="uid://cm6uv300t0ks0" path="res://Assets/Arte Conceptual/PUZZLE_PIEDRA_5.png" id="7_gkdvu"]
[ext_resource type="Texture2D" uid="uid://be86nkjb2ijyk" path="res://Assets/Arte Conceptual/interfaz_inventario.png" id="40_yvyml"]
[ext_resource type="PackedScene" uid="uid://cv7q47p7bgiei" path="res://Scenes/slot.tscn" id="41_scv8t"]
[ext_resource type="Script" uid="uid://djmqoqjd208v2" path="res://Scripts/menu_pause.gd" id="42_f5k12"]
[ext_resource type="Script" uid="uid://hc3xmwdsf67y" path="res://Scripts/menu_options.gd" id="43_kxwnm"]
[ext_resource type="AudioStream" uid="uid://pva1g3prng7a" path="res://Audio/Button_Click.mp3" id="44_r6avp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_23r87"]
size = Vector2(71.58948, 28.387695)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hkb17"]
size = Vector2(71.5896, 38.40683)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4n3bf"]
size = Vector2(91.56804, 48.425903)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qj2t6"]
size = Vector2(91.568054, 65.1246)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gkdvu"]
size = Vector2(122.368286, 78.48354)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lmibb"]
size = Vector2(63, 60)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2qgar"]
size = Vector2(70, 70)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1djk2"]
size = Vector2(100, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y2ef4"]
size = Vector2(100, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_41e3e"]
size = Vector2(120, 160)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fc6wd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_20ibb"]
texture = ExtResource("40_yvyml")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ylpju"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aqwrv"]
bg_color = Color(18.892157, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cxoyd"]
bg_color = Color(0.9882266, 0, 0.10187087, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_aqwrv"]
color = Color(1, 1, 1, 1)
thickness = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kt2nm"]
bg_color = Color(0.16794264, 0.61649424, 0.99999994, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w0mag"]
bg_color = Color(0, 0.3675467, 0.63751465, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtu58"]
bg_color = Color(0.050980393, 0.050980393, 0.050980393, 1)

[node name="Puzzle3" type="Node2D" unique_id=1586064223]

[node name="scene" type="Sprite2D" parent="." unique_id=1206340572]
position = Vector2(578, 324)
scale = Vector2(0.6006458, 0.5988518)
texture = ExtResource("1_5tcat")

[node name="Area2D" type="Area2D" parent="scene" unique_id=1520883097]
scale = Vector2(0.99999994, 0.99999994)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="scene/Area2D" unique_id=1695090277]
position = Vector2(392.07794, 196.20886)
shape = SubResource("RectangleShape2D_23r87")

[node name="Area2D2" type="Area2D" parent="scene" unique_id=1585322272]
scale = Vector2(0.99999994, 0.99999994)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="scene/Area2D2" unique_id=1403088396]
position = Vector2(531.92755, 244.63483)
shape = SubResource("RectangleShape2D_hkb17")

[node name="Area2D3" type="Area2D" parent="scene" unique_id=1382545317]
scale = Vector2(0.99999994, 0.99999994)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="scene/Area2D3" unique_id=1099203870]
position = Vector2(117.37372, 254.65405)
shape = SubResource("RectangleShape2D_4n3bf")

[node name="Area2D4" type="Area2D" parent="scene" unique_id=1242552102]
scale = Vector2(0.99999994, 0.99999994)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="scene/Area2D4" unique_id=2034220721]
position = Vector2(-215.60132, 326.45804)
shape = SubResource("RectangleShape2D_qj2t6")

[node name="Area2D5" type="Area2D" parent="scene" unique_id=451767579]
scale = Vector2(0.99999994, 0.99999994)
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="scene/Area2D5" unique_id=1468707248]
position = Vector2(-476.37057, 253.61871)
shape = SubResource("RectangleShape2D_gkdvu")

[node name="piedra1" type="Area2D" parent="scene" unique_id=294994655 node_paths=PackedStringArray("correct_hole")]
position = Vector2(827.44275, 419.13544)
scale = Vector2(1.6648746, 1.669862)
script = ExtResource("2_gkdvu")
snap_distance = 30
correct_hole = NodePath("../Area2D/CollisionShape2D")
metadata/_edit_group_ = true

[node name="image" type="Sprite2D" parent="scene/piedra1" unique_id=1960773027]
texture = ExtResource("3_2qgar")

[node name="colission" type="CollisionShape2D" parent="scene/piedra1" unique_id=1293090939]
shape = SubResource("RectangleShape2D_lmibb")

[node name="piedra2" type="Area2D" parent="scene" unique_id=1089572891 node_paths=PackedStringArray("correct_hole")]
position = Vector2(-735.87463, 305.58478)
script = ExtResource("2_gkdvu")
correct_hole = NodePath("../Area2D2/CollisionShape2D")
metadata/_edit_group_ = true

[node name="image" type="Sprite2D" parent="scene/piedra2" unique_id=1981237572]
texture = ExtResource("4_2qgar")

[node name="colission" type="CollisionShape2D" parent="scene/piedra2" unique_id=299293729]
shape = SubResource("RectangleShape2D_2qgar")

[node name="piedra3" type="Area2D" parent="scene" unique_id=1708600744 node_paths=PackedStringArray("correct_hole")]
position = Vector2(-824.1129, 447.52307)
script = ExtResource("2_gkdvu")
correct_hole = NodePath("../Area2D3/CollisionShape2D")
metadata/_edit_group_ = true

[node name="image" type="Sprite2D" parent="scene/piedra3" unique_id=1177183128]
texture = ExtResource("5_lmibb")

[node name="colission" type="CollisionShape2D" parent="scene/piedra3" unique_id=1432961059]
shape = SubResource("RectangleShape2D_1djk2")

[node name="piedra4" type="Area2D" parent="scene" unique_id=1090538375 node_paths=PackedStringArray("correct_hole")]
position = Vector2(-839.0968, 202.05331)
script = ExtResource("2_gkdvu")
correct_hole = NodePath("../Area2D4/CollisionShape2D")
metadata/_edit_group_ = true

[node name="image" type="Sprite2D" parent="scene/piedra4" unique_id=756296532]
texture = ExtResource("6_1djk2")

[node name="colission" type="CollisionShape2D" parent="scene/piedra4" unique_id=1350237783]
shape = SubResource("RectangleShape2D_y2ef4")

[node name="piedra5" type="Area2D" parent="scene" unique_id=872030282 node_paths=PackedStringArray("correct_hole")]
position = Vector2(799.13983, 185.3547)
script = ExtResource("2_gkdvu")
correct_hole = NodePath("../Area2D5/CollisionShape2D")
metadata/_edit_group_ = true

[node name="image" type="Sprite2D" parent="scene/piedra5" unique_id=208520270]
texture = ExtResource("7_gkdvu")

[node name="colission" type="CollisionShape2D" parent="scene/piedra5" unique_id=107533832]
shape = SubResource("RectangleShape2D_41e3e")

[node name="UI" type="CanvasLayer" parent="." unique_id=1595312031]

[node name="HUD" type="Control" parent="UI" unique_id=1552952506]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_ogi7j")
metadata/_edit_use_anchors_ = true

[node name="inventory_HUD" type="Panel" parent="UI/HUD" unique_id=1968143591]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 690.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_fc6wd")
metadata/_edit_group_ = true

[node name="open_Inventory_Button" type="Button" parent="UI/HUD/inventory_HUD" unique_id=797383456]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9296875
anchor_top = 0.3587963
anchor_right = 1.0
anchor_bottom = 0.6412037
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 128
text = "<"

[node name="Inventory" type="Panel" parent="UI/HUD/inventory_HUD" unique_id=947729830]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_right = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_20ibb")

[node name="close_Inventory_Button" type="Button" parent="UI/HUD/inventory_HUD/Inventory" unique_id=1772393601]
layout_mode = 0
anchor_left = -0.0043010423
anchor_top = 0.314376
anchor_right = -0.0043010423
anchor_bottom = 0.314376
offset_left = 80.999985
offset_top = 183.0
offset_right = 161.99998
offset_bottom = 366.0
rotation = 3.1415927
theme_override_font_sizes/font_size = 128
text = "<"
metadata/_edit_use_anchors_ = true

[node name="text_Inventory" type="Label" parent="UI/HUD/inventory_HUD/Inventory" unique_id=71261484]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.63256055
anchor_top = 0.083252884
anchor_right = 0.79922724
anchor_bottom = 0.15269732
offset_left = -175.14063
offset_top = -2.6990738
offset_right = -30.640625
offset_bottom = -1.6574059
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "INVENTARIO"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="grid_Inventory" type="GridContainer" parent="UI/HUD/inventory_HUD/Inventory" unique_id=1143492098]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.227957
anchor_top = 0.17219588
anchor_right = 0.7354839
anchor_bottom = 0.8309637
columns = 2
metadata/_edit_use_anchors_ = true

[node name="slot" parent="UI/HUD/inventory_HUD/Inventory/grid_Inventory" unique_id=2144664429 instance=ExtResource("41_scv8t")]
layout_mode = 2

[node name="slot2" parent="UI/HUD/inventory_HUD/Inventory/grid_Inventory" unique_id=608686254 instance=ExtResource("41_scv8t")]
layout_mode = 2

[node name="slot3" parent="UI/HUD/inventory_HUD/Inventory/grid_Inventory" unique_id=423009234 instance=ExtResource("41_scv8t")]
layout_mode = 2

[node name="slot4" parent="UI/HUD/inventory_HUD/Inventory/grid_Inventory" unique_id=1137688523 instance=ExtResource("41_scv8t")]
layout_mode = 2

[node name="slot5" parent="UI/HUD/inventory_HUD/Inventory/grid_Inventory" unique_id=1685974819 instance=ExtResource("41_scv8t")]
layout_mode = 2

[node name="slot6" parent="UI/HUD/inventory_HUD/Inventory/grid_Inventory" unique_id=399843458 instance=ExtResource("41_scv8t")]
layout_mode = 2

[node name="menu_Pause" type="Panel" parent="UI/HUD" unique_id=1729454934]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("42_f5k12")

[node name="button_Container" type="VBoxContainer" parent="UI/HUD/menu_Pause" unique_id=1898105713]
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -99.5
offset_right = 112.5
offset_bottom = 99.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="button_play" type="Button" parent="UI/HUD/menu_Pause/button_Container" unique_id=1771837928]
clip_contents = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Continuar"

[node name="button_options" type="Button" parent="UI/HUD/menu_Pause/button_Container" unique_id=510110040]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Opciones"

[node name="button_exit" type="Button" parent="UI/HUD/menu_Pause/button_Container" unique_id=44782860]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Regresar al inicio"

[node name="menu_Options" type="Panel" parent="UI/HUD" unique_id=1635873009]
visible = false
layout_mode = 0
anchor_left = 0.22222222
anchor_top = 0.16049382
anchor_right = 0.7772895
anchor_bottom = 0.9251543
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ylpju")
script = ExtResource("43_kxwnm")
metadata/_edit_use_anchors_ = true

[node name="title_Options" type="Label" parent="UI/HUD/menu_Options" unique_id=1966891350]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2794937
anchor_right = 0.7205063
anchor_bottom = 0.090817355
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Menu de opciones"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="exit_Options" type="Panel" parent="UI/HUD/menu_Options" unique_id=1627404005]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.92962563
anchor_right = 1.0
anchor_bottom = 0.090817355
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_aqwrv")
metadata/_edit_use_anchors_ = true

[node name="exit" type="Button" parent="UI/HUD/menu_Options/exit_Options" unique_id=802927952]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_cxoyd")
text = "X"

[node name="container_Options" type="VBoxContainer" parent="UI/HUD/menu_Options" unique_id=1605152982]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.099648125
anchor_top = 0.43138245
anchor_right = 0.9003519
anchor_bottom = 0.5686176
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HUD/menu_Options/container_Options" unique_id=1744932484]
layout_mode = 2

[node name="music-Text" type="Label" parent="UI/HUD/menu_Options/container_Options/HBoxContainer" unique_id=1988434258]
layout_mode = 2
text = "Music Volume"

[node name="music_value" type="Label" parent="UI/HUD/menu_Options/container_Options/HBoxContainer" unique_id=240656065]
layout_mode = 2
text = "100"

[node name="music_Volume" type="HSlider" parent="UI/HUD/menu_Options/container_Options" unique_id=248924873]
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxLine_aqwrv")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_kt2nm")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_w0mag")
min_value = -50.0
max_value = 0.0

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/HUD/menu_Options/container_Options" unique_id=1790584123]
layout_mode = 2

[node name="sfx_Text" type="Label" parent="UI/HUD/menu_Options/container_Options/HBoxContainer2" unique_id=1677756086]
layout_mode = 2
text = "SFX Volume"

[node name="sfx_value" type="Label" parent="UI/HUD/menu_Options/container_Options/HBoxContainer2" unique_id=1705258705]
layout_mode = 2
text = "100"

[node name="sfx_Volume" type="HSlider" parent="UI/HUD/menu_Options/container_Options" unique_id=965214508]
layout_mode = 2
theme_override_styles/slider = SubResource("StyleBoxLine_aqwrv")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_kt2nm")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_w0mag")
min_value = -50.0
max_value = 0.0
metadata/_edit_use_anchors_ = true

[node name="checkbox_Fullscreen" type="CheckBox" parent="UI/HUD/menu_Options/container_Options" unique_id=895301711]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_gtu58")
text = "Fullscreen
"

[node name="SFX_button" type="AudioStreamPlayer" parent="UI/HUD" unique_id=1397787344]
stream = ExtResource("44_r6avp")
bus = &"SFX"

[connection signal="input_event" from="scene/piedra1" to="scene/piedra1" method="_on_input_event"]
[connection signal="input_event" from="scene/piedra2" to="scene/piedra2" method="_on_input_event"]
[connection signal="input_event" from="scene/piedra3" to="scene/piedra3" method="_on_input_event"]
[connection signal="input_event" from="scene/piedra4" to="scene/piedra4" method="_on_input_event"]
[connection signal="input_event" from="scene/piedra5" to="scene/piedra5" method="_on_input_event"]
[connection signal="pressed" from="UI/HUD/inventory_HUD/open_Inventory_Button" to="UI/HUD" method="_on_open_inventory_button_pressed"]
[connection signal="pressed" from="UI/HUD/inventory_HUD/Inventory/close_Inventory_Button" to="UI/HUD" method="_on_close_inventory_button_pressed"]
[connection signal="pressed" from="UI/HUD/menu_Pause/button_Container/button_play" to="UI/HUD/menu_Pause" method="_on_button_play_pressed"]
[connection signal="pressed" from="UI/HUD/menu_Pause/button_Container/button_options" to="UI/HUD/menu_Pause" method="_on_button_options_pressed"]
[connection signal="pressed" from="UI/HUD/menu_Pause/button_Container/button_exit" to="UI/HUD/menu_Pause" method="_on_button_exit_pressed"]
[connection signal="pressed" from="UI/HUD/menu_Options/exit_Options/exit" to="UI/HUD/menu_Options" method="_on_exit_pressed"]
[connection signal="value_changed" from="UI/HUD/menu_Options/container_Options/music_Volume" to="UI/HUD/menu_Options" method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="UI/HUD/menu_Options/container_Options/sfx_Volume" to="UI/HUD/menu_Options" method="_on_sfx_volume_value_changed"]
[connection signal="toggled" from="UI/HUD/menu_Options/container_Options/checkbox_Fullscreen" to="UI/HUD/menu_Options" method="_on_checkbox_fullscreen_toggled"]
